Bugfixes in Annotations, ImageSelector